[package]
name = "pancake-macro"
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.101", features = ["full"] }
proc-macro2 = "1.0.95"
quote = "1.0.40"
